# songbook

./: .editorconfig  .env.example  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .vercelignore  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: pre-commit-autoupdate.yml  test.yml
api/: index.py
backend/: add_superuser.py
backend/app/: dependencies.py  factory.py  main.py  middleware.py
backend/app/routers/: auth.py  song.py  user.py
backend/core/: auth.py  note_sequence.py  song.py  store.py  user.py
design/: sb_final.ai
frontend/: App.vue  components.d.ts  dependencies.ts  i18n.ts  main.css  main.ts  router.ts  search.ts
frontend/client/: Client.ts  index.ts
frontend/client/models/: Body_auth_login.ts  ChordsSection.ts  LyricsSection.ts  Song.ts  SongChords.ts  SongLinks.ts  SongNoKey.ts  SongTempo.ts  Token.ts  User.ts  UserAdd.ts  UserUpdatePasswordBody.ts
frontend/client/services/: AuthImplAPI.ts  SongImplAPI.ts  UserImplAPI.ts
frontend/components/: DynamicFieldArray.vue  FieldArea.vue  FormSection.vue  SelectField.vue  SongForm.vue  SongInfo.vue  SongInfoDeleteConfirmation.vue  SongInfoTextSections.vue  TextField.vue  TextareaField.vue  TheFooter.vue  UserListAdd.vue  UserListItem.vue
frontend/core/: noteSequence.ts  utils.ts  validation.ts
frontend/services/: auth.ts  song.ts  user.ts  utils.ts
frontend/views/: Home.vue  Login.vue  NotFound.vue  Song.vue  SongAdd.vue  SongEdit.vue  Users.vue
scripts/: backup_stores.py  generateClient.js  testing_backend.py
tests/backend/: conftest.py
tests/backend/app/: test_dependencies.py
tests/backend/app/controllers/: test_auth.py  test_song.py  test_user.py
tests/backend/core/: test_auth.py  test_note_sequence.py  test_song.py  test_store.py  test_user.py
tests/frontend/: client.test.ts  fixtures.ts  search.test.ts  setup.ts  test-utils.d.ts  utils.ts
tests/frontend/components/: FieldArea.test.ts  FormSection.test.ts  SelectField.test.ts  SongForm_main.test.ts  SongForm_renders.test.ts  SongInfo.test.ts  SongInfoTextSections.test.ts  TextField.test.ts  TextareaField.test.ts  TheFooter.test.ts
tests/frontend/core/: noteSequence.test.ts  utils.test.ts  validation.test.ts
tests/frontend/services/: auth.test.ts  song.test.ts  user.test.ts  utils.test.ts
tests/frontend/views/: Home.test.ts  Login.test.ts  NotFound.test.ts  Song.test.ts  SongAdd.test.ts  SongEdit.test.ts
