[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "backend"
description = "Songbook"
version = "0.0.0"
# Vercel requires Python 3.9: https://vercel.com/docs/runtimes#official-runtimes/python/python-version
requires-python = ">=3.9, <3.10"
authors = [
  { name = "Lev Vereshchagin", email = "mail@vrslev.com" },
]
dynamic = ["dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.optional-dependencies]
dev = [
  "requests==2.28.1",
  "uvicorn[standard]==0.19.0",
  "black==22.10.0",
  "pre-commit==2.20.0",
  "pytest==7.1.3",
  "pytest-cov==4.0.0"
]

[tool.pyright]
pythonVersion = "3.9"
reportPrivateUsage = false
reportMissingTypeStubs = false

[tool.isort]
profile = "black"

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING",
    "class .*(Protocol)",
    "raise NotImplementedError",
]
