[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "backend"
description = "Songbook"
version = "0.0.0"
# Vercel requires Python 3.9: https://vercel.com/docs/runtimes#official-runtimes/python/python-version
requires-python = ">=3.9, <3.10"
authors = [
  { name = "Lev Vereshchagin", email = "mail@vrslev.com" },
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
dev = ["requirements-dev.txt"]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
pythonVersion = "3.9"
reportPrivateUsage = false
reportMissingTypeStubs = false
reportUnknownMemberType = false # due to httpx typing inaccuracies

[tool.isort]
profile = "black"

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING",
    "class .*(Protocol)",
    "raise NotImplementedError",
]
